# irtui

./: Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml
src/: app.rs  event.rs  main.rs  pano.rs  roadtrip.rs  ui.rs
